修改网址和名称
修改ysni.cn和遇上你为chenyu.me和尘遇

--- a/jcweb/map/index.html
+++ b/jcweb/map/index.html
@@ -33,7 +33,7 @@
 		<!--引入世界地图数据库-->
 		<!--script type="text/javascript" src="js/jquery-jvectormap-world-mill.js"></script>
     <title>
-        遇上你</title>
+        尘遇</title>
 	</head>
 <body style="background-color:#353535">
 	<!--background-color: 地图背景颜色-->
