--- a/jcweb/time/cool/index.html
+++ b/jcweb/time/cool/index.html
@@ -2,11 +2,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-<title>遇上你-遇上好时光</title>
-<meta name="keywords" content="遇上你-ysni.cn">
-<meta name="description" content="遇上你-ysni.cn">
-<meta name="author" content="遇上你-ysni.cn">
-<meta name="copyright" content="遇上你-ysni.cn">
+<title>尘遇-遇上好时光</title>
+<meta name="keywords" content="尘遇-ysni.cn">
+<meta name="description" content="尘遇-ysni.cn">
+<meta name="author" content="尘遇-ysni.cn">
+<meta name="copyright" content="尘遇-ysni.cn">
 <style>*{margin:0px;padding:0px; font-family: "微软雅黑";}
 html,iframe,body{height:100%}
 .none{display:none !important}
