--- a/jcweb/time/cool/ysniclock.html
+++ b/jcweb/time/cool/ysniclock.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html class="no-touch"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,user-scalable=no,minimal-ui">
-<title>遇上你-遇上好时光</title>
-<meta name="keywords" content="遇上你-ysni.cn">
-<meta name="description" content="遇上你-ysni.cn"> 
+<title>尘遇-遇上好时光</title>
+<meta name="keywords" content="尘遇-ysni.cn">
+<meta name="description" content="尘遇-ysni.cn"> 
 <script type="text/javascript" src="ysniprotect.js"></script>
 <style id="bce27810-a147-485e-849c-c9b0e0f59010">#rwl-iqxin{position:fixed;transform:translate(-95px,0);width:85px;height:25px;font-size:12px;font-weight: 500;font-family:Verdana, Arial, '宋体';color:#fff;background:#333;z-index:2147483647;margin: 0;opacity:0.05;transition:0.3s;overflow:hidden;user-select:none;text-align:center;white-space:nowrap;line-height:25px;padding:0 16px;border:1px solid #ccc;border-width:1px 1px 1px 0;border-bottom-right-radius:5px;box-sizing: content-box;}#rwl-iqxin input{margin: 0;padding: 0;vertical-align:middle;-webkit-appearance:checkbox;-moz-appearance:checkbox;position: static;clip: auto;opacity: 1;cursor: pointer;}#rwl-iqxin.rwl-active-iqxin{left: 0px;transform:translate(0,0);opacity: 0.9;height: 32px;line-height: 32px}#rwl-iqxin label{margin:0;padding:0;font-weight:500;}#rwl-iqxin #rwl-setbtn{margin: 0 4px 0 0;padding: 0 0 0 4px;border: none;border-radius: 2px;cursor: pointer;background: #fff;color: #000;} </style>
 <link rel="stylesheet" type="text/css" href="ysniclock.css">
