--- a/jcweb/time/webtime/index.html
+++ b/jcweb/time/webtime/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" class="hb-loaded">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>遇上你-网站运行时间</title>
+    <title>尘遇-网站运行时间</title>
 
     <link rel="stylesheet" type="text/css" media="all" href="webstyle.css" />
 
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-<a class="ribbon" href="https://www.ysni.cn/">遇上你——遇见最美时光</a>
+<a class="ribbon" href="https://chenyu.me/">尘遇——遇见最美时光</a>
 
 
 </body>
