--- a/jcweb/ysni/index.html
+++ b/jcweb/ysni/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>遇上你</title>
+    <title>尘遇</title>
     <link rel="stylesheet" href="jcstyle.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
@@ -10,16 +10,16 @@
 <body>
 <div class="box">
     <div class="imgBox">
-        <a target="_blank" href="//www.ysni.cn/"><img src="img4.jpg" alt="遇上你"></a>
+        <a target="_blank" href="//chenyu.me/"><img src="img4.jpg" alt="尘遇"></a>
     </div>
     <div class="content">
-        <h2>遇上你<br>
+        <h2>尘遇<br>
         <span>生活，一半烟火，一半清欢</span></h2>
     </div>
 </div>
 <div class="box">
     <div class="imgBox">
-        <img src="imgqq.jpg" alt="遇上你">
+        <img src="imgqq.jpg" alt="尘遇">
     </div>
     <div class="content">
         <h2>QQ小程序<br>
@@ -29,7 +29,7 @@
 </div>
 <div class="box">
     <div class="imgBox">
-        <img src="imgwx.jpg" alt="遇上你">
+        <img src="imgwx.jpg" alt="尘遇">
     </div>
     <div class="content">
         <h2>微信小程序<br>
