--- a/jcweb/djt/index.html
+++ b/jcweb/djt/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="col">
             <div class="float-right" style="padding-top: 0px;">
-              <a class="btn btn-primary btn-filled btn-xs" href="https://www.ysni.cn" >请不要贪杯哦</a>
+              <a class="btn btn-primary btn-filled btn-xs" href="https://chenyu.me" >请不要贪杯哦</a>
             </div>
           </div>
         </div>
