--- a/jcweb/time/webtime/index.html
+++ b/jcweb/time/webtime/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" type="text/css" media="all" href="webstyle.css" />
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+<script src="https://cdn.chenyu.me/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.countdown.js"></script>
     <script type="text/javascript" src="DD_belated.js"></script> <!--IE6 png图片处理-->
     <script type="text/javascript">
