--- a/jcweb/dfs/index.html
+++ b/jcweb/dfs/index.html
@@ -115,7 +115,7 @@
           <div class="fan__blade"></div>
           <div class="fan__blade"></div>
         </div>
-        <div class="fan__housing-front"><img src="https://cdn.jsdelivr.net/gh/cy-j/chenyu/yus.png"/></div>
+        <div class="fan__housing-front"><img src="https://cdn.chenyu.me/gh/cy-j/chenyu/yus.png"/></div>
       </div>
     </div>
   </div>
