--- a/jcweb/ditu/index.html
+++ b/jcweb/ditu/index.html
@@ -390,7 +390,7 @@
     option = {
 //        backgroundColor: '#404a59',
         title: {
-            text: '林羽凡2019年自驾游线路图',
+            text: '尘遇2019年自驾游线路图',
     	    subtext: '绿色：第1阶段，橙色：第2阶段，蓝色：第3阶段',
             left: 'center',
             textStyle: {
